Fixed box width on small screens.

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -160,7 +160,6 @@ body {
   margin: 10px;
   flex-grow: 1;
   width: 200px;
-  min-width: 350px;
 }
 
 .Screenshot-img {
